# fuseflow

./: .pre-commit-config.yaml  CHANGELOG.md  CLI_USAGE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
src/fuseflow/: __init__.py  _default_dicts.py  core.py  templating.py  utils.py
src/fuseflow/cli/: __init__.py  main.py
src/fuseflow/default_settings/: readme.md
src/fuseflow/templates/: fm_catch.txt.jinja
